netcdf4/src/main/java/ucar/nc2/jni/netcdf/Nc4prototypes.java


    int nc_get_vara(int ncid, int varid, SizeT[] startp, SizeT[] countp, byte[] buf);
    int nc_get_vara_uchar(int ncid, int varid, SizeT[] startp, SizeT[] countp, byte[] ip);
    int nc_get_vara_schar(int ncid, int varid, SizeT[] startp, SizeT[] countp, byte[] ip);
    int nc_get_vara_text(int ncid, int varid, SizeT[] startp, SizeT[] countp, byte[] ip);
    int nc_get_vara_short(int ncid, int varid, SizeT[] startp, SizeT[] countp, short[] ip);
    int nc_get_vara_ushort(int ncid, int varid, SizeT[] startp, SizeT[] countp, short[] ip);
    int nc_get_vara_int(int ncid, int varid, SizeT[] startp, SizeT[] countp, int[] ip);
    int nc_get_vara_uint(int ncid, int varid, SizeT[] startp, SizeT[] countp, int[] ip);
    int nc_get_vara_longlong(int ncid, int varid, SizeT[] startp, SizeT[] countp, long[] ip);
    int nc_get_vara_ulonglong(int ncid, int varid, SizeT[] startp, SizeT[] countp, long[] ip);
    int nc_get_vara_float(int ncid, int varid, SizeT[] startp, SizeT[] countp, float[] ip);
    int nc_get_vara_double(int ncid, int varid, SizeT[] startp, SizeT[] countp, double[] ip);
    int nc_get_vara_string(int ncid, int varid, SizeT[] startp, SizeT[] countp, String[] ip);

    int nc_get_vars(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, byte[] buf);
    int nc_get_vars_uchar(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, byte[] ip);
    int nc_get_vars_schar(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, byte[] ip);
    int nc_get_vars_text(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, byte[] ip);
    int nc_get_vars_short(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, short[] ip);
    int nc_get_vars_ushort(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, short[] ip);
    int nc_get_vars_int(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, int[] ip);
    int nc_get_vars_uint(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, int[] ip);
    int nc_get_vars_longlong(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, long[] ip);
    int nc_get_vars_ulonglong(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, long[] ip);
    int nc_get_vars_float(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, float[] ip);
    int nc_get_vars_double(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, double[] ip);
    int nc_get_vars_string(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, String[] ip);

    int nc_set_default_format(int format, IntByReference old_formatp);
    int nc_create(String path, int cmode, IntByReference ncidp);
    int nc_enddef   (int ncid);
    int nc_sync     (int ncid);
    int nc_def_grp (int parent_ncid, String name, IntByReference new_ncid);
    int nc_def_dim(int ncid,  String name, SizeT len, IntByReference dimid);
    int nc_inq_dimlen(int ncid, int dimid, SizeTByReference lenp);
    int nc_def_var (int ncid, String name, SizeT xtype, int ndims, int[] dimids, IntByReference varidp);
    int nc_def_compound(int ncid, SizeT size, String name, IntByReference typeidp);
    int nc_insert_compound(int ncid, int typeid, String name, SizeT offset, int field_typeid);
    int nc_insert_array_compound(int ncid, int typeid, String name, SizeT offset, int field_typeid, int ndims, int[] dim_sizes);
    int nc_def_enum(int ncid, int base_typeid, String name, IntByReference typeidp);
    int nc_insert_enum(int ncid, int enumid, String name, IntByReference value);

    int nc_rename_grp(int grpid, String name);
    int nc_put_var(int ncid, int varid, byte[] bbuff);

    int nc_put_vara(int ncid, int varid, SizeT[] startp, SizeT[] countp, byte[] bbuff);
    int nc_put_vara_uchar(int ncid, int varid, SizeT[] startp, SizeT[] countp, byte[] ip);
    int nc_put_vara_schar(int ncid, int varid, SizeT[] startp, SizeT[] countp, byte[] ip);
    int nc_put_vara_text(int ncid, int varid, SizeT[] startp, SizeT[] countp, byte[] ip);
    int nc_put_vara_short(int ncid, int varid, SizeT[] startp, SizeT[] countp, short[] ip);
    int nc_put_vara_ushort(int ncid, int varid, SizeT[] startp, SizeT[] countp, short[] ip);
    int nc_put_vara_int(int ncid, int varid, SizeT[] startp, SizeT[] countp, int[] ip);
    int nc_put_vara_uint(int ncid, int varid, SizeT[] startp, SizeT[] countp, int[] ip);
    int nc_put_vara_longlong(int ncid, int varid, SizeT[] startp, SizeT[] countp, long[] ip);
    int nc_put_vara_ulonglong(int ncid, int varid, SizeT[] startp, SizeT[] countp, long[] ip);
    int nc_put_vara_float(int ncid, int varid, SizeT[] startp, SizeT[] countp, float[] ip);
    int nc_put_vara_double(int ncid, int varid, SizeT[] startp, SizeT[] countp, double[] ip);
    int nc_put_vara_string(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, String[] ip);

    int nc_put_vars(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, byte[]  bbuff);

    int nc_put_vars_uchar(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, byte[] ip);
    int nc_put_vars_schar(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, byte[] ip);

    int nc_put_vars_text(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, byte[] ip);
    int nc_put_vars_short(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, short[] ip);
    int nc_put_vars_ushort(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, short[] ip);
    int nc_put_vars_int(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, int[] ip);
    int nc_put_vars_uint(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, int[] ip);
    int nc_put_vars_longlong(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, long[] ip);
    int nc_put_vars_ulonglong(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, long[] ip);
    int nc_put_vars_float(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, float[] ip);

    int nc_put_vars_double(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, double[] ip);
    int nc_put_vars_string(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, String[] ip);
    int nc_put_var_uchar(int ncid, int varid, byte[] ip);
    int nc_put_var_schar(int ncid, int varid,  byte[] ip);
    int nc_put_var_text(int ncid, int varid, byte[] ip);
    int nc_put_var_short(int ncid, int varid, short[] ip);
    int nc_put_var_ushort(int ncid, int varid, short[] ip);
    int nc_put_var_int(int ncid, int varid, int[] ip);
    int nc_put_var_uint(int ncid, int varid, int[] ip);
    int nc_put_var_longlong(int ncid, int varid, long[] ip);
    int nc_put_var_ulonglong(int ncid, int varid, long[] ip);
    int nc_put_var_float(int ncid, int varid, float[] ip);
    int nc_put_var_double(int ncid, int varid, double[] ip);
    int nc_put_var_string(int ncid, int varid, String[] op);

    int nc_put_att (int ncid, int varid, String name, int xtype, SizeT len, byte[] value);
    int nc_put_att_string(int ncid, int varid, String attName, SizeT len, String[] value);
    int nc_put_att_text(int ncid, int varid, String attName, SizeT len, byte[] value);
    int nc_put_att_uchar(int ncid, int varid, String attName, int xtype, SizeT len, byte[] value);
    int nc_put_att_schar(int ncid, int varid, String attName, int xtype, SizeT len, byte[] value);
    int nc_put_att_short(int ncid, int varid, String attName, int xtype, SizeT len, short[] value);
    int nc_put_att_ushort(int ncid, int varid, String attName, int xtype, SizeT len, short[] value);
    int nc_put_att_int(int ncid, int varid, String attName, int xtype, SizeT len, int[] value);
    int nc_put_att_uint(int ncid, int varid, String attName, int xtype, SizeT len, int[] value);
    int nc_put_att_longlong(int ncid, int varid, String attName, int xtype, SizeT len, long[] value);
    int nc_put_att_ulonglong(int ncid, int varid, String attName, int xtype, SizeT len, long[] value);
    int nc_put_att_float(int ncid, int varid, String attName, int xtype, SizeT len, float[] value);
    int nc_put_att_double(int ncid, int varid, String attName, int xtype, SizeT len, double[] value);

    int nc_def_var_deflate(int ncid, int varid, int shuffle, int deflate, int deflate_level);
    int nc_inq_var_deflate(int ncid, int varid, IntByReference shufflep, IntByReference deflatep, IntByReference deflate_levelp);
    int nc_inq_var_szip(int ncid, int varid, IntByReference options_maskp, IntByReference pixels_per_blockp);
    int nc_def_var_fletcher32(int ncid, int varid, int fletcher32);
    int nc_inq_var_fletcher32(int ncid, int varid, IntByReference fletcher32p);

    int nc_def_var_chunking(int ncid, int varid, int storage, SizeT[] chunksizesp);
    int nc_inq_var_chunking(int ncid, int varid, IntByReference storagep, SizeT[] chunksizesp);
    int nc_def_var_fill(int ncid, int varid, int no_fill, byte[] fill_value);
    int nc_inq_var_fill(int ncid, int varid, IntByReference no_fill, byte[] fill_valuep);
    int nc_def_var_endian(int ncid, int varid, int endian);
    int nc_inq_var_endian(int ncid, int varid, IntByReference endianp);
    int nc_set_fill(int ncid, int fillmode, IntByReference old_modep);
    int nc_set_chunk_cache(SizeT size, SizeT nelems, float preemption);
    int nc_get_chunk_cache(SizeTByReference sizep, SizeTByReference nelemsp, FloatByReference preemptionp);
    int nc_set_var_chunk_cache(int ncid, int varid, SizeT size, SizeT nelems, float preemption);
    int nc_get_var_chunk_cache(int ncid, int varid, SizeTByReference sizep, SizeTByReference nelemsp, FloatByReference preemptionp);
    int nc_set_log_level(int newlevel);

    // User type inquiry
    int nc_inq_compound(int ncid, int xtype, byte[] name, SizeTByReference sizep, SizeTByReference nfieldsp);
    int nc_inq_compound_field(int ncid, int xtype, int fieldid, byte[] name, SizeTByReference offsetp, IntByReference field_typeidp, IntByReference ndimsp, int[] dims);
    int nc_inq_vlen(int ncid, int xtype, byte[] name, SizeTByReference datum_sizep, IntByReference base_nc_typep);

    // Vlen specific read/write
    int nc_get_att(int ncid, int varid, String name, Vlen_t[] vlen);
    int nc_get_var(int ncid, int varid, Vlen_t[] vlen);
    int nc_get_var1(int ncid, int varid, SizeT[] indexp, Vlen_t[] vlen);
    int nc_get_vara(int ncid, int varid, SizeT[] startp, SizeT[] countp, Vlen_t[] v);
    int nc_get_vars(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, Vlen_t[] v);

    int nc_put_att(int ncid, int varid, String attName, int xtype, SizeT len, Vlen_t[] value);
    int nc_put_var(int ncid, int varid, Vlen_t[] vlen);
    int nc_put_var1(int ncid, int varid, SizeT[] indexp, Vlen_t[] vlen);
    int nc_put_vara(int ncid, int varid, SizeT[] startp, SizeT[] countp, Vlen_t[] v);
    int nc_put_vars(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, Vlen_t[] v);

    // Pointer based read/write for use by DAP4

    int nc_get_att(int ncid, int varid, String name, Pointer p);
    int nc_get_var(int ncid, int varid, Pointer p);
    int nc_get_var1(int ncid, int varid, SizeT[] indexp, Pointer p);
    int nc_get_vara(int ncid, int varid, SizeT[] startp, SizeT[] countp, Pointer p);
    int nc_get_vars(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, Pointer p);

    int nc_put_att(int ncid, int varid, String attName, int xtype, SizeT len, Pointer p);
    int nc_put_var(int ncid, int varid, Pointer p);
    int nc_put_var1(int ncid, int varid, SizeT[] indexp, Pointer p);
    int nc_put_vara(int ncid, int varid, SizeT[] startp, SizeT[] countp, Pointer p);
    int nc_put_vars(int ncid, int varid, SizeT[] startp, SizeT[] countp, SizeT[] stridep, Pointer p);

}
